[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-tool-tingz"
version = "0.1.3"
description = "Helper toolkit to build MCP servers"
authors = [{name = "tingz", email = "tinkinzhang@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "typer>=0.12",
  "pydantic>=2.0",
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

[project.scripts]
mcp-tool-tingz = "mcp_tool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
